r2 (03. 05. 2021):
Added Thai translation
Added support for Triad Takedown (Yacht Heist) custom heist
Trade Delay Tracker: Fixed an issue where time did not count down
XP Tracker: Fixed an issue where experience was not multiplied correctly if "Multiply by all XP bonuses" option was selected
The Biker Heist Day 1: Fixed an issue where a tracker for Mike in the garage did not unpause (client only)
Hoxton Breakout Day 2: Fixed an issue where "Approved clearance" tracker did not count up sometimes (client only)

r1 (01. 05. 2021):
First Release