@@ -44,10 +44,16 @@ elseif level_id == "alex_1" or level_id == "rat" then -- Rats Day 1 and Cook Off
         chance = 15
     end
     triggers = {
-        [100723] = { chance = chance, id = "CookChance", icons = { "pd2_methlab" }, class = "EHIChanceTracker", special_function = SF.SetChanceWhenTrackerExistsOrIncreaseChance }
+        [100723] = { amount = chance, id = "CookChance", icons = { "pd2_methlab" }, class = "EHIChanceTracker", special_function = SF.IncreaseChance }
     }
 else
     return
+end
+
+local function GetTime(id)
+    local full_time = triggers[id].time or 0
+    full_time = full_time + (triggers[id].random_time and math.random(triggers[id].random_time.low, triggers[id].random_time.high) or 0)
+    return full_time
 end
 
 local function CreateTrackerForReal(id, icon2)
@@ -56,7 +62,7 @@ local function CreateTrackerForReal(id, icon2)
     end
     managers.hud:AddTracker({
         id = triggers[id].id or trigger_id_all,
-        time = triggers[id].time or (triggers[id].random_time and math.random(triggers[id].random_time.low, triggers[id].random_time.high)) + (triggers[id].delay or 0),
+        time = GetTime(id),
         chance = triggers[id].chance,
         max = triggers[id].max,
         icons = triggers[id].icons or trigger_icon_all,
